feat/TimeTracking-work-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -41,7 +41,21 @@
                 </section>
             </div>
             <div class="active-state" id="a-s-work">
-             <h1>Work</h1>
+                <div class="container-a-s-d-work-image">
+                    <img src="/TimeTrackingChallenger/img/icon-work.svg" alt="Work Image" id="a-s-d-work-image">
+                </div>
+                <section class="work-desc" id="a-s-d-work">
+                    <div class="container-a-s-d-work-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Work</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">32hrs</p>
+                            <p id="timerLastWeek">Last Week 36hrs</p>
+                    </div>
+                </section>
             </div>
             <div class="active-state" id="a-s-play">
                 <h1>Play</h1>
