feat/TimerTracking/Play-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -53,15 +53,26 @@
                             </ul>
                         </header>
                             <p id="timer">32hrs</p>
-                            <p id="timerLastWeek">Last Week 36hrs</p>
+                            <p id="timerLastWeek">Last Week - 36hrs</p>
                     </div>
                 </section>
             </div>
             <div class="active-state" id="a-s-play">
-                <h1>Play</h1>
-                <div class="active-state-desc" id="a-s-d-play">
-
+                <div class="container-a-s-d-play-image">
+                    <img src="/TimeTrackingChallenger/img/icon-play.svg" alt="Play Image" id="a-s-d-play-image">
                 </div>
+                <section class="play-desc" id="a-s-d-play">
+                    <div class="container-a-s-d-play-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Play</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">10hrs</p>
+                            <p id="timerLastWeek">Last Week - 8hrs</p>
+                    </div>
+                </section>
             </div>
             <div class="active-state" id="a-s-study">
                 <h1>Study</h1>
