feat/TimerTracking/study-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -75,17 +75,23 @@
                 </section>
             </div>
             <div class="active-state" id="a-s-study">
-                <h1>Study</h1>
-                <div class="active-state-desc" id="a-s-d-study">
-
+                <div class="container-a-s-d-study-image">
+                    <img src="/TimeTrackingChallenger/img/icon-study.svg" alt="Study Image" id="a-s-d-study-image">
                 </div>
+                <section class="study-desc" id="a-s-d-study">
+                    <div class="container-a-s-d-study-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Study</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">4hrs</p>
+                            <p id="timerLastWeek">Last Week - 7hrs</p>
+                    </div>
+                </section>
             </div>
-            <div class="active-state" id="a-s-exercise">
-                <h1>Exercise</h1>
-                <div class="active-state-desc" id="a-s-d-exercise">
-
-                </div>
-            </div>
+           
             <div class="active-state" id="a-s-social">
                 <h1>Social</h1>
                 <div class="active-state-desc" id="a-s-d-social">
