feat/TimerTracking/exercise-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -91,7 +91,23 @@
                     </div>
                 </section>
             </div>
-           
+            <div class="active-state" id="a-s-exercise">
+                <div class="container-a-s-d-exercise-image">
+                    <img src="/TimeTrackingChallenger/img/icon-exercise.svg" alt="Exercise Image" id="a-s-d-exercise-image">
+                </div>
+                <section class="exercise-desc" id="a-s-d-exercise">
+                    <div class="container-a-s-d-exercise-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Exercise</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">4hrs</p>
+                            <p id="timerLastWeek">Last Week - 5hrs</p>
+                    </div>
+                </section>
+            </div>
             <div class="active-state" id="a-s-social">
                 <h1>Social</h1>
                 <div class="active-state-desc" id="a-s-d-social">
