feat/TimerTracking/social-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -109,10 +109,21 @@
                 </section>
             </div>
             <div class="active-state" id="a-s-social">
-                <h1>Social</h1>
-                <div class="active-state-desc" id="a-s-d-social">
-
+                <div class="container-a-s-d-social-image">
+                    <img src="/TimeTrackingChallenger/img/icon-social.svg" alt="Social Image" id="a-s-d-social-image">
                 </div>
+                <section class="social-desc" id="a-s-d-social">
+                    <div class="container-a-s-d-social-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Social</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">5hrs</p>
+                            <p id="timerLastWeek">Last Week - 10hrs</p>
+                    </div>
+                </section>
             </div>
             <div class="active-state" id="a-s-self-care">
                 <h1>Self Care</h1>
