feat/TimerTracking/self-care-finalizado

--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -126,10 +126,21 @@
                 </section>
             </div>
             <div class="active-state" id="a-s-self-care">
-                <h1>Self Care</h1>
-                <div class="active-state-desc" id="a-s-d-self-care">
-
+                <div class="container-a-s-d-self-care-image">
+                    <img src="/TimeTrackingChallenger/img/icon-self-care.svg" alt="Self-care" id="a-s-d-self-care-image">
                 </div>
+                <section class="self-care-desc" id="a-s-d-self-care">
+                    <div class="container-a-s-d-self-care-text">
+                        <header>
+                            <ul>
+                                <li><a href="#">Self Care</a></li>
+                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                            </ul>
+                        </header>
+                            <p id="timer">2hrs</p>
+                            <p id="timerLastWeek">Last Week - 2hrs</p>
+                    </div>
+                </section>
             </div>
         </section>
     </div>
