--- a/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
+++ b/FrontMentorDesafios/TimeTrackingChallenger/html/index.html
@@ -30,14 +30,9 @@
                     </div>
                 </section>
                 <section class="profile-menu">
-                    <p class="profile-menu-items" id="profile-menu-daily"><a href="#"
-                            style="font-family: 'Rubik', sans-serif; text-decoration: none; color: white;">Daily</a></p>
-                    <p class="profile-menu-items" id="profile-menu-weekly"><a href="#"
-                            style="font-family: 'Rubik', sans-serif; text-decoration: none; color: white;">Weekly</a>
-                    </p>
-                    <p class="profile-menu-items" id="profile-menu-monthly"><a href="#"
-                            style="font-family: 'Rubik', sans-serif; text-decoration: none; color: white;">Monthly</a>
-                    </p>
+                    <p class="profile-menu-items"><a href="#" id="profile-menu-daily">Daily</a></p>
+                    <p class="profile-menu-items"><a href="#" id="profile-menu-weekly">Weekly</a></p>
+                    <p class="profile-menu-items"><a href="#" id="profile-menu-monthly">Monthly</a></p>
                 </section>
             </div>
             <div class="active-state" id="a-s-work">
@@ -49,11 +44,13 @@
                         <header>
                             <ul>
                                 <li><a href="#">Work</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">32hrs</p>
-                            <p id="timerLastWeek">Last Week - 36hrs</p>
+                        <p id="timer">32hrs</p>
+                        <p id="timerLastWeek">Last Week - 36hrs</p>
                     </div>
                 </section>
             </div>
@@ -66,11 +63,13 @@
                         <header>
                             <ul>
                                 <li><a href="#">Play</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">10hrs</p>
-                            <p id="timerLastWeek">Last Week - 8hrs</p>
+                        <p id="timer">10hrs</p>
+                        <p id="timerLastWeek">Last Week - 8hrs</p>
                     </div>
                 </section>
             </div>
@@ -83,28 +82,33 @@
                         <header>
                             <ul>
                                 <li><a href="#">Study</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">4hrs</p>
-                            <p id="timerLastWeek">Last Week - 7hrs</p>
+                        <p id="timer">4hrs</p>
+                        <p id="timerLastWeek">Last Week - 7hrs</p>
                     </div>
                 </section>
             </div>
             <div class="active-state" id="a-s-exercise">
                 <div class="container-a-s-d-exercise-image">
-                    <img src="/TimeTrackingChallenger/img/icon-exercise.svg" alt="Exercise Image" id="a-s-d-exercise-image">
+                    <img src="/TimeTrackingChallenger/img/icon-exercise.svg" alt="Exercise Image"
+                        id="a-s-d-exercise-image">
                 </div>
                 <section class="exercise-desc" id="a-s-d-exercise">
                     <div class="container-a-s-d-exercise-text">
                         <header>
                             <ul>
                                 <li><a href="#">Exercise</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">4hrs</p>
-                            <p id="timerLastWeek">Last Week - 5hrs</p>
+                        <p id="timer">4hrs</p>
+                        <p id="timerLastWeek">Last Week - 5hrs</p>
                     </div>
                 </section>
             </div>
@@ -117,28 +121,33 @@
                         <header>
                             <ul>
                                 <li><a href="#">Social</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">5hrs</p>
-                            <p id="timerLastWeek">Last Week - 10hrs</p>
+                        <p id="timer">5hrs</p>
+                        <p id="timerLastWeek">Last Week - 10hrs</p>
                     </div>
                 </section>
             </div>
             <div class="active-state" id="a-s-self-care">
                 <div class="container-a-s-d-self-care-image">
-                    <img src="/TimeTrackingChallenger/img/icon-self-care.svg" alt="Self-care" id="a-s-d-self-care-image">
+                    <img src="/TimeTrackingChallenger/img/icon-self-care.svg" alt="Self-care"
+                        id="a-s-d-self-care-image">
                 </div>
                 <section class="self-care-desc" id="a-s-d-self-care">
                     <div class="container-a-s-d-self-care-text">
                         <header>
                             <ul>
                                 <li><a href="#">Self Care</a></li>
-                                <li><a href="#" ><p id="reticencias">...</p></a></li>
+                                <li><a href="#">
+                                        <p id="reticencias">...</p>
+                                    </a></li>
                             </ul>
                         </header>
-                            <p id="timer">2hrs</p>
-                            <p id="timerLastWeek">Last Week - 2hrs</p>
+                        <p id="timer">2hrs</p>
+                        <p id="timerLastWeek">Last Week - 2hrs</p>
                     </div>
                 </section>
             </div>
